adds contours example for help with ofxOpenCV

--- a/opencvContoursExample1/opencvContoursExample1.xcodeproj/xcshareddata/xcschemes/opencvContoursExample1 Debug.xcscheme
+++ b/opencvContoursExample1/opencvContoursExample1.xcodeproj/xcshareddata/xcschemes/opencvContoursExample1 Debug.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "opencvExample.app"
-               BlueprintName = "opencvExample"
-               ReferencedContainer = "container:opencvExample.xcodeproj">
+               BuildableName = "opencvContoursExample1.app"
+               BlueprintName = "opencvContoursExample1"
+               ReferencedContainer = "container:opencvContoursExample1.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "opencvExample.app"
-            BlueprintName = "opencvExample"
-            ReferencedContainer = "container:opencvExample.xcodeproj">
+            BuildableName = "opencvContoursExample1.app"
+            BlueprintName = "opencvContoursExample1"
+            ReferencedContainer = "container:opencvContoursExample1.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -52,9 +52,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "opencvExample.app"
-            BlueprintName = "opencvExample"
-            ReferencedContainer = "container:opencvExample.xcodeproj">
+            BuildableName = "opencvContoursExample1.app"
+            BlueprintName = "opencvContoursExample1"
+            ReferencedContainer = "container:opencvContoursExample1.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -70,9 +70,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "opencvExample.app"
-            BlueprintName = "opencvExample"
-            ReferencedContainer = "container:opencvExample.xcodeproj">
+            BuildableName = "opencvContoursExample1.app"
+            BlueprintName = "opencvContoursExample1"
+            ReferencedContainer = "container:opencvContoursExample1.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
